...
            "value": "Einkauf"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shopping"
          }
        }
      }
    },
    "shoppingListEmptyTitle": {
      "extractionState": "manual",
...
            "value": "Deine Einkaufsliste ist leer"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Your shopping list is empty"
          }
        }
      }
    },
    "shoppingListEmptyMessage": {
      "extractionState": "manual",
...
            "value": "Rezept entfernen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Remove Recipe"
          }
        }
      }
    },
    "shoppingForServings": {
      "extractionState": "manual",
...
